# paging-gpio-firmware

./: Cargo.toml  openocd.cfg  openocd.gdb  run.ps1  test.py
.cargo/: config
src/: ethernet.rs  main.rs
