[package]
authors = ["David Wood <code@dtwood.co.uk>"]
edition = "2018"
readme = "README.md"
name = "paging-gpio"
version = "0.1.0"

[dependencies]
cortex-m = "0.5"
cortex-m-rt = "0.6"
embedded-hal = "0.2"

[dependencies.smoltcp]
version = "0.5"
default_features = false
features = [
    "proto-ipv4",
    "proto-ipv6",
    "socket-raw",
    "socket-udp",
    "socket-tcp",
]

[dependencies.tm4c129x-hal]
features = ["rt"]
git = "https://github.com/dtwood/tm4c-hal"
branch = "ethernet-draft"

# this lets you use `cargo fix`!
[[bin]]
name = "paging-gpio"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
