[package]
authors = ["David Wood <code@dtwood.co.uk>"]
edition = "2018"
readme = "README.md"
name = "paging-gpio"
version = "0.1.0"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-rtic = "0.5"
embedded-hal = "0.2"
heapless = "0.5"
log = "0.4.8"

[dependencies.smoltcp]
version = "0.6"
default_features = false
features = [
    "proto-ipv4",
    "socket-tcp",
    "ethernet",
]

[dependencies.tm4c129x-hal]
features = ["rt"]
path = "../tm4c-hal/tm4c129x-hal"

[profile.dev]
opt-level = 3
